# Nowspide

./: .gitignore  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
data/: Makefile.am  nowspide.desktop  nowspide.ui  style.css
src/: .gitignore  Makefile.am  main.c  nsp-app.c  nsp-app.h  nsp-db.c  nsp-db.h  nsp-feed-item-list.c  nsp-feed-item-list.h  nsp-feed-item.c  nsp-feed-item.h  nsp-feed-list-view.c  nsp-feed-list-view.h  nsp-feed-list.c  nsp-feed-list.h  nsp-feed-parser.c  nsp-feed-parser.h  nsp-feed.c  nsp-feed.h  nsp-jobs.c  nsp-jobs.h  nsp-net.c  nsp-net.h  nsp-typedefs.h  nsp-webview.c  nsp-webview.h  nsp-window.c  nsp-window.h  ui-definition.xml
